--- a/RegisterForm/src/main/resources/messages_uk.properties
+++ b/RegisterForm/src/main/resources/messages_uk.properties
@@ -36,6 +36,12 @@ pattern.model.phone=\\+\\d{2}\\(\\d{3}\\)\\d{3}-\\d{2}-\\d{2}
 pattern.model.email=([a-z0-9_-]+\\.)*[a-z0-9_-]+@[a-z0-9_-]+(\\.[a-z0-9_-]+)*\\.[a-z]{2,6}$
 pattern.model.group=[1-6]{1}
 
+pattern.address.index=\\d{5}
+pattern.address.city=[A-Z]{1}[a-z]*
+pattern.address.street=[A-Z]{1}[a-z]*
+pattern.address.house=\\d*
+pattern.address.apartment=\\d*
+
 view.model.last.name=Прізвище: 
 view.model.name=Ім'я: 
 view.model.middle.name=По батькові: 
@@ -46,4 +52,4 @@ view.model.cellular.phone=Мобільний номер:
 view.model.cellular.phone.second=Мобільний номер (другий): 
 view.model.email=E-mail: 
 view.model.group=Група: 
-view.model.address=Адреса: 1
+view.model.address=Адреса: 
